<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.practice.Activity.ViewContactFormActivity">

    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/my_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/contact_us"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/youtube"
        android:orderInCategory="100"
        android:title="@string/youtube"
        app:showAsAction="never" />
    <item
        android:id="@+id/instagram"
        android:orderInCategory="100"
        android:title="@string/instagram"
        app:showAsAction="never" />
    <item
        android:id="@+id/lnp_ekart"
        android:orderInCategory="100"
        android:title="@string/lnp_ekart"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_account"
        android:orderInCategory="100"
        android:title="@string/action_delete_account"
        app:showAsAction="never" />
</menu>